fixed scrollbar under Header, changed the styles.css

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,9 +1,9 @@
-.main-content-container {
+.main-content-container-desktop {
   position: absolute;
-  top: 64px;
+  top: 56px;
   right: 0;
   left: 0;
+  bottom: 0;
   background: transparent;
   overflow: auto;
-  display: inline-block;
 }
